fix(test): prevent MobileNavBtn from move on active status on mobile devices

--- a/frontend/src/Components/Header/MobileNavBtn/MobileNavBtn.module.scss
+++ b/frontend/src/Components/Header/MobileNavBtn/MobileNavBtn.module.scss
@@ -16,7 +16,7 @@
   justify-content: center;
   border: 1px solid rgba(255, 193, 7);
 
-  &.move {
+  &:not(.mobile).move {
     right: 15px;
   }
 }
